fix: files spacing

--- a/src/components/styles/Card.module.css
+++ b/src/components/styles/Card.module.css
@@ -1,6 +1,6 @@
 .card{
     display: flex;
-    width: calc(100% / 1);
+    width: 100%;
     justify-content: center;
 }
 
@@ -20,7 +20,6 @@
     width: 100%;
     margin-bottom: 15px;
 }
-
 
 .instructor{
     color: rgb(83, 83, 83);
